--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -22,7 +22,7 @@
             android:layout_marginEnd="16dp"
             android:maxLines="1"
             android:textAlignment="textEnd"
-            android:textSize="42sp"
+            android:textSize="@dimen/max_result_text_size"
             app:layout_constraintEnd_toEndOf="@+id/textViewExpression"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textViewExpression" />
@@ -36,7 +36,7 @@
             android:layout_marginEnd="16dp"
             android:maxLines="2"
             android:textAlignment="textEnd"
-            android:textSize="24sp"
+            android:textSize="@dimen/max_expression_text_size"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
@@ -56,7 +56,7 @@
             app:layout_constraintTop_toBottomOf="@+id/textViewResult" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/constraintLayuotKeys"
+            android:id="@+id/constraintLayoutKeys"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
