--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-<!-- Standard material design clickable area size-->
+    <!-- Standard material design clickable area size-->
     <dimen name="button_dimen">58dp</dimen>
     <dimen name="button_dimen_long">134dp</dimen>
+    <dimen name="min_result_text_size">30sp</dimen>
+    <dimen name="max_result_text_size">42sp</dimen>
+    <dimen name="min_expression_text_size">18sp</dimen>
+    <dimen name="max_expression_text_size">24sp</dimen>
+    <dimen name="text_size_step">2sp</dimen>
 </resources>
