--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,6 +2,7 @@
 <resources>
     <!-- Standard material design clickable area size-->
     <dimen name="button_dimen">58dp</dimen>
+    <dimen name="button_dimen_small">48dp</dimen>
     <dimen name="button_dimen_long">134dp</dimen>
     <dimen name="min_result_text_size">30sp</dimen>
     <dimen name="max_result_text_size">42sp</dimen>
